--- a/面试.md
+++ b/面试.md
@@ -2,113 +2,168 @@
 ### 开始
 你好
 안녕 하세요
+
 是不是本人？
 본인이 맞나요?
+
 是的，
 그렇다.
+
 我要开始录音了。
 나는 녹음을 시작하겠다
+
 好的
 좋은
+
 请自我介绍
 자기소개를 하시오
-##### 自我介绍  
-##### 자기 소개
-你好，我叫衡子润。简单自我介绍一下。我是中国人。我现住在安徽，安徽中医药大学的学生，我性格活泼纯真，不管做什么事都很认真，我对计算机特别感兴趣。以后我想从事电脑方面的工作。我申请的专业是软件工程专业。
-##### 喜欢做什么
-##### 무엇을 하기 좋아하느냐
-我喜欢听音乐，我喜欢英文歌曲。hip-hop
+```
+
+自我介绍  
+자기 소개
+
+喜欢做什么
+무엇을 하기 좋아하느냐
+ 我喜欢听音乐，我喜欢英文歌曲。
 저는 음악을 좋아합니다. 저는 영어 가곡을 좋아합니다.
+
 我也喜欢旅游
 저도 여행을 좋아합니다.
-#####喜欢吃什么
+
+喜欢吃什么
 무엇을 즐겨 먹느냐
+
 肉和水果，比如说：苹果，西瓜，葡萄，荔枝
 고기와 과일, 예를 들면, 사과, 수박, 포도, 여지
-#####心情不好的时候做什么
+
+心情不好的时候做什么
 기분이 좋지 않을 때 무엇을 합니까?
+
 我比较喜欢听音乐
 나는 음악 듣는 것을 비교적 좋아한다
-##### 年龄 出生日期
+
+年龄 出生日期
 연령 생년월일
+
 我今年22岁了，我的生日是1998年2月18日
 저는 올해 22살입니다. 저의 생일은 천구백구십팔년 2월 18일입니다.
-##### 优点，缺点
+
+优点，缺点
 장점과 결함.
+
 优点：学习能力强，愿意挑战难题，喜欢思考
 장점:학습능력이 강하며 난제에 도전하고 사고하기 좋아한다
+
 缺点：我欢睡懒觉
 단점:난 늦잠 자는게 좋아
-##### 现在在家吗
+
+ 现在在家吗
 지금 집에 있어요?
+
 是的，我家在安徽，我现在在家里，我在书房
 네, 우리 집은 안후이 지역에 있어요. 저는 지금 집에 있고, 저는 서재에 있어요.
-##### 家庭情况
+
+ 家庭情况
 가정 형편
+
 我的父亲（）是一名律师，母亲（）是一名退休工人。我是家里唯一的孩子。
 제 아버지 ()는 변호사이고 어머니 ()는 퇴직 노동자입니다.나는 집안의 유일한 아이이다.
-##### 一边吃饭一边干嘛
+
+一边吃饭一边干嘛
 식사하면서 뭐 해요
+
 我喜欢和朋友一起吃饭，吃饭的时候聊天
 나는 친구랑 밥 먹기를 좋아하고, 밥을 먹을 때 한담을 한다.
 
-### 专业
+专业
 전공
-##### 为什么去韩国
-왜 한국에가요?
+
+ 为什么去韩国
+ 왜 한국에가요?
+
 我想要走出国家，去看看世界的样子。韩国的电子技术很强大，我想要去韩国学习。
 나는 나라를 떠나 세계의 모습을 좀 보고 싶다.한국의 전자기술이 아주 강해서 한국에 가서 배우고 싶습니다.
-##### 为什么选择我们学校
-왜 우리 학교를 선택했는지
+
+ 为什么选择我们学校
+ 왜 우리 학교를 선택했는지
+
 韩国顺天乡大学是韩国有名的大学，和安徽中医药大学是友校。放心可靠
 한국의 순천향대학은 한국의 유명한 대학이고 안휘 중의약 대학과 친한 학교입니다.안심하여 믿을 만하다.
-##### 为什么选择这个专业
-왜이 전공을 선택했는지
+
+ 为什么选择这个专业
+ 왜이 전공을 선택했는지
+
 我喜欢计算机，计算机就像是我最好的朋友。我很喜欢学习电脑的过程。我擅长学习计算机。我在大一的时候参加全省计算机比赛获得三等奖，去年获得全国二等奖。
-나는 컴퓨터를 좋아한다. 컴퓨터는 마치 내 가장 친한 친구 같다.나는 컴퓨터 학습 과정을 매우 좋아한다.컴퓨터를 잘 배웠습니다.나는 대학 1학년 때 전성 컴퓨터 경기에 참가해 3 등상을 받았고, 작년에 전국 2 등상을 받았다.
-### 学习
+나는 컴퓨터를 좋아한다. 컴퓨터는 마치 내 가장 친한 친구 같다.나는 컴퓨터 학습 과정을 매우 좋아한다.컴퓨터를 잘 배웠습니다.
+
+나는 대학 1학년 때 전성 컴퓨터 경기에 참가해 3 등상을 받았고, 작년에 전국 2 등상을 받았다.
+
+ 学习
 학습
-##### 韩语学习情况
+
+ 韩语学习情况
 한국어 학습 상황
+
 我在学校学习韩语已经两年了。每天学两个小时韩语。我最喜欢的老师是黄老师，去年我通过了TIOIK一的考试。
-저는 학교에서 한국어를 배운지 벌써 2년 되었어요.하루에 두 시간씩 한국어를 배우다.제가 제일 좋아하는 선생님은 황 선생님이에요. 작년에 제가 티오일이라는 시험을 통과했어요.
-##### 上课睡觉吗
+저는 학교에서 한국어를 배운지 벌써 2년 되었어요.하루에 두 시간씩 한국어를 배우다.
+
+제가 제일 좋아하는 선생님은 황 선생님이에요. 작년에 제가 티오일이라는 시험을 통과했어요.
+
+ 上课睡觉吗
 수업시간에 자나요?
+
 不，上课要认真学习。
 아니, 수업시간에 열심히 공부해야 해.
-##### 去韩国以后的学习计划
+
+ 去韩国以后的学习计划
 한국에서의 학습계획
+
 首先要学好韩语，还要学好计算机。争取能拿到奖学金。
 우선 한국어를 잘 배워야 할뿐더러 계산기도 잘 배워야 한다.장학금을 타려고 노력하다.
-##### 毕业打算
+
+ 毕业打算
 졸업 예정
+
 我计划继续学习，读研究生。但是我还没有决定在中国或者在韩国。
 공부를 계속할 생각입니다.하지만 중국이나 한국에서 결정을 내리지는 않았어요.
-### 生活
+
+ 生活
 생활
-##### 生病了怎么办
+
+ 生病了怎么办
 병이 나면 어떻게 하지?
+
 去医院，让医生帮助我。
 병원에 가서 의사 선생님한테 좀 도와 달라고 해라.
-##### 毕业后做什么
+
+ 毕业后做什么
 졸업 후에 뭘 할까?
+
 我计划继续学习，读研究生。但是我还没有决定在中国或者在韩国。
 공부를 계속할 생각입니다.하지만 중국이나 한국에서 결정을 내리지는 않았어요.
-##### 你知道韩国有名的东西
+
+ 你知道韩国有名的东西
 한국에서 유명한 거 아시죠?
+
 电子竞技，电脑游戏，三星，明星EXO。
 비디오 게임, 컴퓨터 게임, 삼성, 슈퍼스타,
 
-### 旅行
+
+ 旅行
 여행
-##### 什么时候
+
+ 什么时候
 언제
+
 去年的五月一日，一个人去了南京旅游，我们在南京玩了一周，去了很多好玩的地方，有海洋馆，公园，天文台，博物馆。
-지난해 5월 1일, 한사람이 남경에서 여행을 떠났다. 우리는 남경에서 일주일동안 놀았고 해양관, 공원, 천문대, 박물관이 있고 놀기 좋은 곳이 아주 많다.
+지난해 5월 1일, 한사람이 남경에서 여행을 떠났다. 우리는 남경에서 일주일동안 
+
+놀았고 해양관, 공원, 천문대, 박물관이 있고 놀기 좋은 곳이 아주 많다.
+
+```
+
 ### 结束
-끝
-非常感谢，再见。
-감사합니다. 안녕히 계세요.
+
 
 
 
